第七次保存。完成intro界面左边

--- a/src/assets/css/serverlist.css
+++ b/src/assets/css/serverlist.css
@@ -5,6 +5,7 @@
 
 .button {
   width: 95%;
+  border: 0;
   margin: auto;
   margin-top: 20px;
   margin-bottom: 20px;
@@ -21,9 +22,10 @@
   text-align: center;
 }
 
-.el-table__body tr:hover > td {
+.el-table__body tr:hover>td {
   background-color: #958831 !important;
 }
+
 
 .el-button {
   width: 150px;
@@ -35,7 +37,7 @@
 
 
 .el-button.is-active,
-.el-button:active{
+.el-button:active {
   background: #ffa500;
   color: white;
 }
