--- a/src/assets/css/advancedskill.css
+++ b/src/assets/css/advancedskill.css
@@ -44,6 +44,139 @@
   box-shadow: 4px 4px 15px;
 }
 
+#Spawnpointexample {
+  height: 800px;
+  position: relative;
+  background: url("@/assets/images/tutorial/advancedskills/spawnpointexample.png") no-repeat;
+  background-size: contain;
+  margin-left: 300px;
+  /* border: 1px solid white; */
+}
+
+#Spawnpointexample button {
+  float: left;
+}
+
+#Spawnpointexample #currentspawn {
+  position: absolute;
+  font-size: 1.5rem;
+  left: 800px;
+  top: 580px;
+}
+
+#Spawnpointexample #predictspawn {
+  position: absolute;
+  font-size: 1.5rem;
+  left: 700px;
+  top: 650px;
+}
+
+
+.point {
+  background: transparent;
+  position: absolute;
+  font-size: 25px;
+  font-weight: bold;
+  color: white;
+  display: none;
+}
+
+.currentpos {
+  display: inline;
+  border: 5px solid red;
+  cursor: pointer;
+}
+
+.predictpos {
+  display: inline;
+  border: 5px solid green;
+}
+
+#Spawnpointexample :nth-child(1) {
+  left: 490px;
+  top: 370px;
+}
+
+#Spawnpointexample :nth-child(2) {
+  left: 420px;
+  top: 660px;
+}
+
+#Spawnpointexample :nth-child(3) {
+  left: 10px;
+  top: 755px;
+}
+
+#Spawnpointexample :nth-child(4) {
+  left: 125px;
+  top: 470px;
+}
+
+#Spawnpointexample :nth-child(5) {
+  left: 190px;
+  top: 190px;
+}
+
+#Spawnpointexample :nth-child(6) {
+  left: 250px;
+  top: 190px;
+}
+
+#Spawnpointexample :nth-child(7) {
+  left: 235px;
+  top: 660px;
+}
+
+#Spawnpointexample :nth-child(8) {
+  left: 95px;
+  top: 760px;
+}
+
+#Spawnpointexample :nth-child(9) {
+  left: 170px;
+  top: 10px;
+}
+
+#Spawnpointexample :nth-child(10) {
+  left: 270px;
+  top: 140px;
+}
+
+#Spawnpointexample :nth-child(11) {
+  left: 10px;
+  top: 80px;
+}
+
+#Spawnpointexample :nth-child(12) {
+  left: 10px;
+  top: 355px;
+}
+
+#Spawnpointexample :nth-child(13) {
+  left: 10px;
+  top: 390px;
+}
+
+#Spawnpointexample :nth-child(14) {
+  left: 10px;
+  top: 270px;
+}
+
+#Spawnpointexample :nth-child(15) {
+  left: 340px;
+  top: 0px;
+}
+
+#Spawnpointexample :nth-child(16) {
+  left: 520px;
+  top: 275px;
+}
+
+#Spawnpointexample :nth-child(17) {
+  left: 545px;
+  top: 90px;
+}
+
 .AGTricksContent {
   position: relative;
   padding-bottom: 10px;
