--- a/src/assets/css/intro.css
+++ b/src/assets/css/intro.css
@@ -1,27 +1,41 @@
-#welcome {
+#welcomehl {
   animation: shake 20s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
   animation-iteration-count: infinite;
   text-shadow: 1px 10px 10px rgba(255, 255, 255, 0.75),
     -1px 10px 10px rgba(255, 255, 255, 0.75);
 }
+
 @keyframes shake {
+
   10%,
   90% {
     transform: translate3d(-10px, 5px, 0);
   }
+
   20%,
   80% {
     transform: translate3d(20px, -5px, 0);
   }
+
   30%,
   50%,
   70% {
     transform: translate3d(-30px, 5px, 0);
   }
+
   40%,
   60% {
     transform: translate3d(40px, -5px, 0);
   }
+}
+
+#time {
+  position: absolute;
+  left: 60px;
+  margin-bottom: 30px;
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: #ffa500;
 }
 
 #screen {
@@ -42,7 +56,7 @@ a {
 .menu h1 {
   text-align: left;
   color: white;
-  margin: 250px 40px 40px;
+  margin: 190px 40px 40px;
   font-size: 4rem;
 }
 
@@ -53,6 +67,7 @@ a {
 .menu a:hover {
   color: #ffc198;
 }
+
 .menu a:active {
   color: #fff2e9;
 }
@@ -61,6 +76,7 @@ a {
   display: inline-block;
   list-style-type: none;
 }
+
 .menu li {
   margin-top: 10px;
   font-size: 2rem;
