--- a/src/assets/css/advancedskill.css
+++ b/src/assets/css/advancedskill.css
@@ -224,3 +224,32 @@
   font-family: 'Courier New', Courier, monospace;
   border-radius: 5px;
 }
+
+
+.text {
+  font-size: 1.5rem !important;
+  color: white;
+}
+
+.item {
+  padding: 10px 0 !important;
+}
+
+.el-card {
+  color: white;
+}
+
+.box-card {
+  background: #3e4537;
+}
+
+.box-card .el-card__header {
+  background-color: #4b5745;
+  color: white;
+}
+
+.box-card .el-card__body {
+  background-color: #3e4537;
+  color: white;
+  height: auto;
+}
