--- a/src/assets/css/client.css
+++ b/src/assets/css/client.css
@@ -23,7 +23,7 @@
 }
 
 .el-button.is-active,
-.el-button:active{
+.el-button:active {
   background: #ffa500;
   color: white;
 }
@@ -32,4 +32,38 @@
 .el-button:focus {
   background: #ffa500;
   color: white;
+}
+
+
+.text {
+  font-size: 1.5rem !important;
+  color: white;
+}
+
+.item {
+  padding: 10px 0 !important;
+}
+
+.el-card {
+  color: white;
+}
+
+.box-card {
+  background: #3e4537;
+}
+
+.box-card .el-card__header {
+  background-color: #4b5745;
+  color: white;
+}
+
+.box-card .el-card__body {
+  background-color: #3e4537;
+  color: white;
+  height: auto;
+}
+
+#select .el-card__body {
+  height: 650px;
+  overflow-y: scroll;
 }
