--- a/src/assets/css/download.css
+++ b/src/assets/css/download.css
@@ -146,3 +146,32 @@
 .ItemBlockWad .DLButton:hover {
   background-image: url("@/assets/images/download/DLbutton2.png");
 }
+
+
+.text {
+  font-size: 1.5rem !important;
+  color: white;
+}
+
+.item {
+  padding: 10px 0 !important;
+}
+
+.el-card {
+  color: white;
+}
+
+.box-card {
+  background: #3e4537;
+}
+
+.box-card .el-card__header {
+  background-color: #4b5745;
+  color: white;
+}
+
+.box-card .el-card__body {
+  background-color: #3e4537;
+  color: white;
+  height: auto;
+}
