--- a/src/assets/css/tutorial.css
+++ b/src/assets/css/tutorial.css
@@ -528,3 +528,32 @@
   overflow: hidden;
   background-color: black;
 }
+
+
+.text {
+  font-size: 1.5rem !important;
+  color: white;
+}
+
+.item {
+  padding: 10px 0 !important;
+}
+
+.el-card {
+  color: white;
+}
+
+.box-card {
+  background: #3e4537;
+}
+
+.box-card .el-card__header {
+  background-color: #4b5745;
+  color: white;
+}
+
+.box-card .el-card__body {
+  background-color: #3e4537;
+  color: white;
+  height: auto;
+}
