第17次保存。修复el-card颜色问题，bunnyhop图示报错未解决

--- a/src/assets/css/video.css
+++ b/src/assets/css/video.css
@@ -32,22 +32,22 @@ a {
   transform: scale(1.05);
 }
 
-.el-card {
+/* .el-card {
   color: white;
-}
+} */
 
-.box-card {
+/* .box-card {
   background: #3e4537;
-}
+} */
 
-.box-card .el-card__header {
+/* .el-card .el-card__header {
   background-color: #4b5745;
   color: white;
-}
+} */
 
-.box-card .el-card__body {
+/* .el-card .el-card__body {
   background-color: #3e4537;
   color: white;
   height: auto;
-}
+} */
 
