第23次保存。完成游戏指令部分

--- a/src/assets/css/command.css
+++ b/src/assets/css/command.css
@@ -40,3 +40,7 @@
   font-family: 'Courier New', Courier, monospace;
   border-radius: 5px;
 }
+
+.el-table__body tr:hover>td {
+  background-color: #958831 !important;
+}
