--- a/src/assets/css/login.css
+++ b/src/assets/css/login.css
@@ -7,7 +7,7 @@
 
 .box_in {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   border: white 3px;
   border-radius: 10px;
