--- a/src/assets/css/basicskill.css
+++ b/src/assets/css/basicskill.css
@@ -115,10 +115,12 @@
 
 .el-card {
   color: white;
+  min-width: 1080px;
 }
 
 .box-card {
   background: #3e4537;
+  min-width: 1080px;
 }
 
 .box-card .el-card__header {
