--- a/src/assets/css/intro.css
+++ b/src/assets/css/intro.css
@@ -1,4 +1,5 @@
 #welcomehl {
+  width: 620px;
   animation: shake 20s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
   animation-iteration-count: infinite;
   text-shadow: 1px 10px 10px rgba(255, 255, 255, 0.75),
@@ -30,6 +31,7 @@
 }
 
 #time {
+  width: 670px;
   position: absolute;
   left: 60px;
   margin-bottom: 30px;
@@ -39,8 +41,12 @@
 }
 
 #screen {
-  height: 900px;
+  min-width: 1080px;
   overflow: hidden;
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: center;
+  justify-content: space-between;
 }
 
 a {
@@ -49,7 +55,8 @@ a {
 }
 
 .menu {
-  float: left;
+  width: 680px;
+  flex: 2;
   bottom: 0;
 }
 
@@ -84,12 +91,11 @@ a {
 }
 
 #gordonsmile {
-  float: right;
+  flex: 1;
   right: 0;
   bottom: 0;
 }
 
 #gordonsmile .el-image {
-  width: 925px;
-  height: 100%;
+  width: 900px;
 }
